--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ defaults:
 jobs:
   commands:
     name : Run command tests
+    runs-on: ubuntu-latest
     container: ghcr.io/foundeo/cfml-ci-tools/cfml-ci-tools:1.0.6
     steps:
       - name: Checkout repo
