--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install system module
-        run: ln -s $PWD ~/.CommandBox/cfml/modules/commandbox-cbwire
+        run: |
+        echo $PWD
+        cd ~/
+        ls
+        cd -
+        ls ./
+        ln -s $PWD ~/.CommandBox/cfml/modules/commandbox-cbwire
 
       - name: Run cbwire create
         run: box cbwire create name=User
