--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,10 +18,10 @@ jobs:
       - name: Install system module
         run: |
           ls ./
-          ls /github/home/.CommandBox/
-          ls /github/home/.CommandBox/cfml/
-          ls /github/home/.CommandBox/cfml/modules
-          ln -s $PWD ~/.CommandBox/cfml/modules/commandbox-cbwire
+          ls /root/.CommandBox/
+          ls /root/.CommandBox/cfml/
+          ls /root/.CommandBox/cfml/modules
+          ln -s $PWD /root/commandbox-cbwire
 
       - name: Run cbwire create
         run: box cbwire create name=User
